Set desktop to texmode for spvm

--- a/schedule/yast/cryptlvm/cryptlvm_sle_12_spvm.yaml
+++ b/schedule/yast/cryptlvm/cryptlvm_sle_12_spvm.yaml
@@ -8,6 +8,7 @@ description: >
 name: cryptlvm
 vars:
     OPT_KERNEL_PARAMS: console=%SERIALDEV% VNCSize=1024x768
+    DESKTOP: textmode
 schedule:
   - installation/bootloader
   - installation/welcome
