Update schedule, add grub2 and remove few userspace tests

--- a/schedule/jeos/sle/hyperv/jeos-main.yaml
+++ b/schedule/jeos/sle/hyperv/jeos-main.yaml
@@ -3,7 +3,7 @@ description: 'Main JeOS test suite. Maintainer: ccret.'
 name: 'jeos-main@svirt-hyperv ( svirt )'
 schedule:
   - installation/bootloader_hyperv
-  - installation/bootloader_uefi
+  - jeos/grub2
   - jeos/firstrun
   - jeos/record_machine_id
   - console/force_scheduled_tasks
