--- a/schedule/jeos/sle/hyperv/jeos-extratest.yaml
+++ b/schedule/jeos/sle/hyperv/jeos-extratest.yaml
@@ -1,9 +1,9 @@
 ---
 description: 'Extratest JeOS test suite. Maintainer: ccret.'
-name: 'jeos-extratest@svirt-hyperv-{uefi} ( svirt )'
+name: 'jeos-extratest@svirt-hyperv ( svirt )'
 schedule:
   - installation/bootloader_hyperv
-  - installation/bootloader_uefi
+  - jeos/grub2
   - jeos/firstrun
   - jeos/record_machine_id
   - console/force_scheduled_tasks
@@ -12,7 +12,6 @@ schedule:
   - jeos/root_fs_size
   - jeos/build_key
   - console/suseconnect_scc
-  - console/prepare_test_data
   - console/consoletest_setup
   - console/integration_services
   - console/zypper_lr_validate
@@ -20,20 +19,19 @@ schedule:
   - console/validate_packages_and_patterns
   - console/zypper_extend
   - console/check_os_release
+  - console/timezone
+  - console/ntp
   - console/sshd
   - console/update_alternatives
   - console/rpm
   - console/libvorbis
   - console/command_not_found
   - console/openssl_alpn
-  - console/autoyast_removed
   - console/syslog
-  - console/ntp
   - console/check_default_network_manager
   - console/git
   - console/cups
   - console/java
-  - console/sqlite3
   - console/ant
   - console/gdb
   - console/perf
@@ -47,21 +45,15 @@ schedule:
   - console/machinery
   - console/gpg
   - console/rsync
-  - console/clamav
   - console/shells
-  - console/sudo
   - console/repo_orphaned_packages_check
   - console/dstat
-  - x11/evolution/evolution_prepare_servers
-  - console/mutt
   - console/journalctl
-  - console/vhostmd
-  - sysauth/sssd
-  - console/timezone
   - console/procps
   - console/docker
   - console/docker_runc
   - console/sle2docker
   - console/docker_image
   - console/zypper_docker
+  - sysauth/sssd
   - console/kdump_and_crash
