--- a/schedule/jeos/sle/hyperv/jeos-extratest.yaml
+++ b/schedule/jeos/sle/hyperv/jeos-extratest.yaml
@@ -6,6 +6,7 @@ schedule:
   - jeos/grub2
   - jeos/firstrun
   - jeos/record_machine_id
+  - console/system_prepare
   - console/force_scheduled_tasks
   - jeos/grub2_gfxmode
   - jeos/diskusage
