--- a/schedule/vagrant.yaml
+++ b/schedule/vagrant.yaml
@@ -7,6 +7,7 @@ schedule:
   - boot/boot_to_desktop
   - {{add_box_virtualbox}}
   - virtualization/vagrant/add_box_libvirt
+  - virtualization/vagrant/sshfs
   - virtualization/vagrant/boxes/tumbleweed
 conditional_schedule:
   add_box_virtualbox:
