Pass textmode variable to the power_action

--- a/schedule/yast/lvm_raid1/lvm+raid1_sle15_svirt-hyperv.yaml
+++ b/schedule/yast/lvm_raid1/lvm+raid1_sle15_svirt-hyperv.yaml
@@ -11,6 +11,7 @@ test_data :
 schedule :
   - installation/isosize
   - installation/bootloader_hyperv
+  - installation/bootloader
   - installation/welcome
   - installation/accept_license
   - installation/scc_registration
