--- a/schedule/yast/yast2_cmd.yaml
+++ b/schedule/yast/yast2_cmd.yaml
@@ -1,8 +1,14 @@
 name:           yast2_cmd
 description:    >
     Yast2 cmd interface tests.
-
+conditional_schedule:
+  bootloader_zkvm:
+    ARCH:
+      s390x:
+        - installation/bootloader_zkvm
 schedule:
+     # Called on ARCH: s390x
+     - {{bootloader_zkvm}}
      - boot/boot_to_desktop
      - yast2_cmd/yast_rdp
      - yast2_cmd/yast_timezone
