Generalize 'xorg_vt' module name to be valid for XOrg/XWayland

--- a/schedule/rt/migration_offline_sle12sp3+rt.yaml
+++ b/schedule/rt/migration_offline_sle12sp3+rt.yaml
@@ -35,7 +35,7 @@ schedule:
   - console/textinfo
   - console/hostname
   - console/upgrade_snapshots
-  - console/xorg_vt
+  - console/x_vt
   - console/zypper_lr
   - console/zypper_ref
   - console/ncurses
