--- a/schedule/rt/sle12/sles+rt-net.yaml
+++ b/schedule/rt/sle12/sles+rt-net.yaml
@@ -19,7 +19,7 @@ schedule:
   - console/textinfo
   - console/hostname
   - console/installation_snapshots
-  - console/xorg_vt
+  - console/x_vt
   - console/zypper_lr
   - console/zypper_ref
   - console/ncurses
