--- a/schedule/staging/cryptlvm_minimal_x@64bit-staging.yaml
+++ b/schedule/staging/cryptlvm_minimal_x@64bit-staging.yaml
@@ -42,7 +42,7 @@ schedule:
   - console/textinfo
   - console/hostname
   - console/installation_snapshots
-  - console/xorg_vt
+  - console/x_vt
   - console/zypper_lr
   - console/zypper_ref
   - console/ncurses
