--- a/schedule/yast/cryptlvm/cryptlvm_opensuse.yaml
+++ b/schedule/yast/cryptlvm/cryptlvm_opensuse.yaml
@@ -40,7 +40,7 @@ schedule:
   - console/force_scheduled_tasks
   - console/textinfo
   - console/hostname
-  - console/xorg_vt
+  - console/x_vt
   - console/zypper_lr
   - console/ncurses
   - console/yast2_lan
