Use DESKTOP=textmode in lvm_encrypt_separate_boot
Runs quicker and is less prone to failures.

--- a/schedule/yast/lvm_encrypt_separate_boot.yaml
+++ b/schedule/yast/lvm_encrypt_separate_boot.yaml
@@ -6,7 +6,7 @@ vars:
   UNENCRYPTED_BOOT: 1
   ENCRYPT: 1
   FULL_LVM_ENCRYPT: 1
-  DESKTOP: gnome
+  DESKTOP: textmode
 schedule:
   - installation/isosize
   - installation/bootloader_start
