Use ARCH variable to differentiate s390x bootloader

--- a/schedule/qam/15-SP1/qam-minimal-base@64bit.yaml
+++ b/schedule/qam/15-SP1/qam-minimal-base@64bit.yaml
@@ -63,10 +63,10 @@ schedule:
 - console/coredump_collect
 conditional_schedule:
   boot:
-    MACHINE:
-      zkvm:
+    ARCH:
+      s390x:
         - installation/bootloader_zkvm
-      64bit:
+      x86_64:
         - installation/isosize
         - installation/bootloader
   grub:
