--- a/schedule/qam/15-SP1/mau-extratests.yaml
+++ b/schedule/qam/15-SP1/mau-extratests.yaml
@@ -60,8 +60,8 @@ schedule:
 - console/coredump_collect
 conditional_schedule:
   zkvm_boot:
-    MACHINE:
-      zkvm:
+    ARCH:
+      s390x:
         - installation/bootloader_zkvm
   sound:
     ARCH:
