--- a/schedule/yast/yast2_cmd.yaml
+++ b/schedule/yast/yast2_cmd.yaml
@@ -1,41 +1,21 @@
 name:           yast2_cmd
 description:    >
-    Yast2 cmd interface tests.
-
+    YaST2 cmd interface tests.
 conditional_schedule:
   bootloader_zkvm:
     ARCH:
       s390x:
         - installation/bootloader_zkvm
-  # The test modules are failed on s390x and aarch64 and excluded to do investigations
-  under_issues_investigation:
-    ARCH:
-      ppc64le:
-        - yast2_cmd/yast_lan
-        - yast2_cmd/yast_ftp_server
-        - yast2_cmd/yast_users
-        - yast2_cmd/yast_keyboard
-        - yast2_cmd/yast_sysconfig
-      x86_64:
-        - yast2_cmd/yast_ftp_server
-        - yast2_cmd/yast_users
-        - yast2_cmd/yast_keyboard
-        - yast2_cmd/yast_sysconfig
-      aarch64:
-        - yast2_cmd/yast_keyboard
-        - yast2_cmd/yast_sysconfig
-      s390x:
-        - yast2_cmd/yast_lan
-        - yast2_cmd/yast_ftp_server
-        - yast2_cmd/yast_users
-
 schedule:
-     # Called on ARCH: s390x
-     - {{bootloader_zkvm}}
-     - boot/boot_to_desktop
-     - yast2_cmd/yast_rdp
-     - yast2_cmd/yast_timezone
-     - yast2_cmd/yast_tftp_server
-     - yast2_cmd/yast_nfs_server
-     - yast2_cmd/yast_nfs_client
-     - {{under_issues_investigation}}
+  - {{bootloader_zkvm}}
+  - boot/boot_to_desktop
+  - yast2_cmd/yast_rdp
+  - yast2_cmd/yast_timezone
+  - yast2_cmd/yast_ftp_server
+  - yast2_cmd/yast_nfs_server
+  - yast2_cmd/yast_nfs_client
+  - yast2_cmd/yast_tftp_server
+  - yast2_cmd/yast_lan
+  - yast2_cmd/yast_users
+  - yast2_cmd/yast_keyboard
+  - yast2_cmd/yast_sysconfig
