Wicked: add AUTOYAST variable to test suite yaml

--- a/schedule/create_hdd_autoyast_wicked.yaml
+++ b/schedule/create_hdd_autoyast_wicked.yaml
@@ -1,6 +1,7 @@
 ---
 name: create_hdd_autoyast_wicked
 vars:
+  AUTOYAST: autoyast_sle15/autoyast_wicked_%ARCH%.xml
   AUTOYAST_CONFIRM: 1
   DESKTOP: textmode
   HDDSIZEGB: 30
