--- a/schedule/yast/btrfs/btrfs_sle_libstorage.yaml
+++ b/schedule/yast/btrfs/btrfs_sle_libstorage.yaml
@@ -79,28 +79,4 @@ conditional_schedule:
         - console/verify_separate_home
         - console/validate_file_system
 test_data:
-  subvolume:
-    cow:
-      - /opt
-      - /srv
-      - /tmp
-      - /usr/local
-      - /var/cache
-      - /var/crash
-      - /var/lib/machines
-      - /var/lib/mailman
-      - /var/lib/named
-      - /var/opt
-      - /var/spool
-      - /var/tmp
-      - /.snapshots
-    no_cow:
-      - /var/lib/libvirt/images
-      - /var/lib/mariadb
-      - /var/lib/mysql
-      - /var/lib/pgsql
-      - /var/log
-  file_system:
-     /home: xfs
-     /: btrfs
-     
+  !include: test_data/yast/btrfs/btrfs_sle_libstorage.yaml
