Fix for SAP Staging:S group - Part 2
Another fix for SAP Staging:S group, as the first one was not fully complete.

--- a/schedule/staging/sles4sap_offline_gnome@64bit-staging.yaml
+++ b/schedule/staging/sles4sap_offline_gnome@64bit-staging.yaml
@@ -1,16 +1,5 @@
 ---
-name:           sles4sap_offline_gnome@64bit-staging
-description:    >
-  Graphical installation tests for SLES for SAP Applications without
-  SCC registration. Boot into Gnome.
-  Test SLES for SAP specific applications.
-vars:
-  DM_NEEDS_USERNAME: 1
-  HDDSIZEGB: 60
-  ROOTONLY: 1
-  SHUTDOWN_NEEDS_AUTH: 0
-  SLES4SAP_MODE: sles4sap
-  SLE_PRODUCT: sles4sap
+name: sles4sap_default_install@64bit-staging
 schedule:
   - installation/bootloader_start
   - installation/welcome
@@ -22,15 +11,18 @@ schedule:
   - installation/partitioning
   - installation/partitioning_finish
   - installation/installer_timezone
+  - installation/hostname_inst
   - installation/user_settings_root
   - installation/resolve_dependency_issues
   - installation/installation_overview
   - installation/disable_grub_timeout
   - installation/start_install
   - installation/await_install
+  - installation/logs_from_installation_system
   - installation/reboot_after_installation
   - installation/grub_test
   - installation/first_boot
   - sles4sap/patterns
   - sles4sap/sapconf
   - sles4sap/saptune
+...
