Test_data file for modify_existing_partition@aarch64
Activate swap in modify_existing_partition

--- a/schedule/yast/modify_existing_partition_sle.yaml
+++ b/schedule/yast/modify_existing_partition_sle.yaml
@@ -38,14 +38,13 @@ test_data:
     # part_size is the size we input in partitioner, lsblk_expected_size_output is what we'll use for validation.
     part_size: '11GiB'
     lsblk_expected_size_output: '11G'
-  boot-uefi:
+  swap:
     disk: 'vda'
-    existing_partition: 'vda1'
-    mount_point: '/boot/efi'
-    fs_type: 'fat'
+    existing_partition: 'vda3'
+    fs_type: 'swap'
     skip: 1
-    part_size: '256MiB'
-    lsblk_expected_size_output: '256M'
+    part_size: '2GiB'
+    lsblk_expected_size_output: '2G'
 conditional_schedule:
   reconnect_mgmt_console:
     ARCH:
@@ -55,4 +54,3 @@ conditional_schedule:
     BACKEND:
       qemu:
         - installation/grub_test
-
