--- a/schedule/yast/modify_existing_partition_opensuse.yaml
+++ b/schedule/yast/modify_existing_partition_opensuse.yaml
@@ -27,14 +27,4 @@ schedule:
   - console/validate_modify_existing_partition
 
 test_data:
-  root:
-    disk: 'vda'
-    existing_partition: 'vda2'
-    mount_point: '/'
-    fs_type: 'ext4'
-    # Sizes should be preferably expressed in human readable binary units (eg GiB) for this test suite:
-    # we use lsblk in validation modules, wich uses human readable binary unit (*ibits).
-    # part_size is the size we input in partitioner, lsblk_expected_size_output is what we'll use for validation.
-    part_size: '10GiB'
-    lsblk_expected_size_output: '10G'
-
+  !include: test_data/yast/modify_existing_partition/modify_existing_partition.yaml
