Add pam automated tests - pam.sh is a "bats" script to output TAP format - the config pam_test is from "pam-test"   https://github.com/pbrezina/pam-test

--- a/schedule/qam/12-SP1/mau-extratests.yaml
+++ b/schedule/qam/12-SP1/mau-extratests.yaml
@@ -6,6 +6,7 @@ schedule:
 - console/consoletest_setup
 - console/check_os_release
 - console/openvswitch
+- console/pam
 - console/sshd
 - console/update_alternatives
 - console/rpm
