Re-enable registration processing step for Full medium
We got registration back to full medium and many of the adjustments
we did are not necessary anymore.
Complex part is that we also have some adjustments which are
necessary, like not selecting DVD source anymore.

--- a/schedule/yast/skip_registration/skip_registration@svirt-hyperv.yaml
+++ b/schedule/yast/skip_registration/skip_registration@svirt-hyperv.yaml
@@ -9,6 +9,7 @@ schedule:
   - installation/bootloader_start
   - installation/welcome
   - installation/accept_license
+  - installation/scc_registration
   - installation/addon_products_sle
   - installation/system_role
   - installation/partitioning
@@ -32,4 +33,3 @@ schedule:
   - shutdown/cleanup_before_shutdown
   - shutdown/shutdown
   - shutdown/hyperv_upload_assets
-  
