--- a/schedule/yast/skip_registration/offline_install+skip_registration.yaml
+++ b/schedule/yast/skip_registration/offline_install+skip_registration.yaml
@@ -8,6 +8,7 @@ schedule:
   - installation/welcome
   - installation/accept_license
   - installation/network_configuration
+  - installation/scc_registration
   - installation/addon_products_sle
   - installation/partitioning
   - installation/partitioning_finish
