--- a/schedule/yast/skip_registration/releasenotes_origin+unregistered.yaml
+++ b/schedule/yast/skip_registration/releasenotes_origin+unregistered.yaml
@@ -6,6 +6,7 @@ schedule:
   - installation/bootloader_start
   - installation/welcome
   - installation/accept_license
+  - installation/scc_registration
   - installation/addon_products_sle
   - installation/releasenotes_origin
   - installation/partitioning
