--- a/schedule/yast/skip_registration/skip_registration@svirt-xen-pv.yaml
+++ b/schedule/yast/skip_registration/skip_registration@svirt-xen-pv.yaml
@@ -9,6 +9,7 @@ schedule:
   - installation/bootloader_start
   - installation/welcome
   - installation/accept_license
+  - installation/scc_registration
   - installation/addon_products_sle
   - installation/system_role
   - installation/partitioning
