--- a/schedule/qam/12-SP5/qam-gnome.yaml
+++ b/schedule/qam/12-SP5/qam-gnome.yaml
@@ -24,7 +24,7 @@ schedule:
 - console/textinfo
 - console/hostname
 - console/installation_snapshots
-- console/x_vt
+- {{x_vt}}
 - console/zypper_lr
 - console/zypper_ref
 - console/ncurses
@@ -74,6 +74,10 @@ conditional_schedule:
         - boot/reconnect_mgmt_console
       x86_64:
         - installation/grub_test
+  x_vt:
+    ARCH:
+      x86_64:
+        - console/x_vt
   sled_tests:
     SLE_PRODUCT:
       sled:
