--- a/schedule/qam/12-SP5/qam-minimal-base.yaml
+++ b/schedule/qam/12-SP5/qam-minimal-base.yaml
@@ -39,7 +39,7 @@ schedule:
 - console/zypper_lr
 - console/zypper_ref
 - console/firewall_enabled
-- console/glibc_sanity
+- {{glibc_sanity}}
 - console/sshd
 - console/ssh_cleanup
 - console/ncurses
@@ -74,4 +74,8 @@ conditional_schedule:
         - boot/reconnect_mgmt_console
       x86_64:
         - installation/grub_test
+  glibc_sanity:
+    ARCH:
+      x86_64:
+        - console/glibc_sanity
 ...
