--- a/schedule/qam/12-SP5/qam-gnome.yaml
+++ b/schedule/qam/12-SP5/qam-gnome.yaml
@@ -24,13 +24,12 @@ schedule:
 - console/textinfo
 - console/hostname
 - console/installation_snapshots
-- {{x_vt}}
+- {{x86_64_tests}}
 - console/zypper_lr
 - console/zypper_ref
 - console/ncurses
 - console/yast2_lan
 - console/curl_https
-- console/glibc_sanity
 - console/zypper_in
 - console/yast2_i
 - console/yast2_bootloader
@@ -74,9 +73,10 @@ conditional_schedule:
         - boot/reconnect_mgmt_console
       x86_64:
         - installation/grub_test
-  x_vt:
+  x86_64_tests:
     ARCH:
       x86_64:
+        - console/glibc_sanity
         - console/x_vt
   sled_tests:
     SLE_PRODUCT:
