Implement generic validator for AutoYaST profiles
Description
    - Traverse yaml data which structure should mimic the one in AutoYaST profile using hashes and arrays, creating xpath expression for each value to be evaluated.
    - In case of list in xml, yaml structure should be represented as an array so it would be able to generate expression to check that element on the list met expectations. If a hash is used instead, it will validate its inner value but it will not check size of the list.
    - To identify an element in a list (as they are not ordered) on xml via xpath it has been added a special field named unique_key which value is the name of the selected property to search the element on the list. When that property is not a direct child (in other words, it is not at the same level in the yaml) we should use unique_value to specify the value expected for that inner/nested property (it is verbose but avoid to search every time in the whole yaml tree).
    - Report errors found (both yaml and execution errors)

--- a/schedule/yast/autoyast_multi_btrfs.yaml
+++ b/schedule/yast/autoyast_multi_btrfs.yaml
@@ -10,8 +10,11 @@ schedule:
   - autoyast/installation
   - installation/boot_encrypt
   - installation/first_boot
+  - autoyast/console 
+  - autoyast/clone
   - console/validate_multi_btrfs_partitioning
   - console/validate_encrypt
+  - autoyast/verify_cloned_profile
 test_data:
   multi_devices:
     - mount_point: /
@@ -27,3 +30,110 @@ test_data:
   crypttab:
     num_devices_encrypted: 1
   !include: test_data/yast/encryption/default_enc.yaml
+  profile:
+    partitioning:
+      - drive:
+          unique_key: device
+          device: /dev/vda
+          disklabel: gpt
+          partitions:
+            - partition:
+                unique_key: partition_nr
+                partition_nr: 1
+            - partition:
+                unique_key: partition_nr
+                partition_nr: 2
+            - partition:
+                unique_key: partition_nr
+                partition_nr: 3
+                filesystem: swap
+                mount: swap
+          type: CT_DISK
+      - drive:
+          unique_key: device
+          device: /dev/vdb
+          disklabel: gpt
+          partitions:
+            - partition:
+                unique_key: partition_nr
+                partition_nr: 1
+          type: CT_DISK
+      - drive:
+          unique_key: device
+          device: /dev/vdc
+          disklabel: none
+          partitions:
+            - partition:
+                unique_key: create
+                create: false
+          type: CT_DISK
+      - drive:
+          unique_key: device
+          device: /dev/vdd
+          disklabel: gpt
+          partitions:
+            - partition: 
+                unique_key: partition_nr
+                partition_nr: 1
+                crypt_method: luks1
+          type: CT_DISK
+      - drive:
+          unique_key: mount
+          unique_value: /
+          btrfs_options:
+            data_raid_level: raid0
+            metadata_raid_level: raid1
+          disklabel: none
+          enable_snapshots: false
+          partitions:
+            - partition:
+                unique_key: label
+                filesystem: btrfs
+                label: root_multi_btrfs
+                mount: /
+                subvolumes:
+                  - subvolume:
+                      unique_key: path
+                      copy_on_write: true
+                      path: tmp
+                  - subvolume:
+                      unique_key: path
+                      copy_on_write: true
+                      path: usr/local
+                  - subvolume:
+                      unique_key: path
+                      copy_on_write: true
+                      path: home
+                  - subvolume:
+                      unique_key: path
+                      copy_on_write: true
+                      path: root
+                  - subvolume:
+                      unique_key: path
+                      copy_on_write: true
+                      path: srv
+                  - subvolume:
+                      unique_key: path
+                      copy_on_write: false
+                      path: var
+                  - subvolume:
+                      unique_key: path
+                      copy_on_write: true
+                      path: opt
+                subvolumes_prefix: '@'
+          type: CT_BTRFS
+      - drive:
+          unique_key: mount
+          unique_value: /test
+          btrfs_options:
+            data_raid_level: raid0
+            metadata_raid_level: raid1
+          disklabel: none
+          partitions:
+            - partition:
+                unique_key: label
+                filesystem: btrfs
+                label: test_multi_btrfs
+                mount: /test
+                subvolumes_prefix: ''
+          type: CT_BTRFS
