--- a/schedule/yast/autoyast_disk_as_md_member.yaml
+++ b/schedule/yast/autoyast_disk_as_md_member.yaml
@@ -20,7 +20,7 @@ schedule:
   - installation/first_boot
   - console/system_prepare
   - autoyast/verify_disk_as_md_member
-  - autoyast/verify_disk_as_md_member_clone
+  - autoyast/verify_cloned_profile
 test_data:
   disk: '/dev/md0'
   partitions_count: 2
@@ -29,6 +29,23 @@ test_data:
   mount_point:
     root: '/'
     data: '/data'
-  xpath:
-    mount: '//ns:partitioning/ns:drive[ns:device="/dev/md/0"]/ns:partitions/ns:partition/ns:mount'
-    raid_type: '//ns:partitioning/ns:drive[ns:device="/dev/md/0"]/ns:raid_options/ns:raid_type'
+  profile:
+    partitioning:
+      - drive:
+          unique_key: device
+          device:  /dev/sda
+      - drive:
+          unique_key: device
+          device: /dev/md/0
+          raid_options:
+            raid_type: raid1
+          partitions:
+            - partition:
+                unique_key: mount
+                mount: /
+            - partition:
+                unique_key: mount
+                mount: /data
+      - drive:  
+          unique_key: device
+          device: /dev/sdb
