Add krb5 test into extratests yaml

--- a/schedule/qam/15/mau-extratests.yaml
+++ b/schedule/qam/15/mau-extratests.yaml
@@ -31,6 +31,7 @@ schedule:
 - console/perf
 - console/sysctl
 - console/sysstat
+- console/krb5
 - console/curl_ipv6
 - console/wget_ipv6
 - console/ca_certificates_mozilla
