--- a/schedule/qam/15-SP1/mau-extratests.yaml
+++ b/schedule/qam/15-SP1/mau-extratests.yaml
@@ -29,6 +29,7 @@ schedule:
 - console/gdb
 - console/sysctl
 - console/sysstat
+- console/krb5
 - console/curl_ipv6
 - console/wget_ipv6
 - console/ca_certificates_mozilla
