ncurses: Add curses test
This extends the current ncurses test with some relevant tests

- Text attributes
- Colors
- Special characters
- menus
- panels
- forms
- background combinations
- key capture
- window movements

--- a/schedule/qam/15-SP1/qam-allpatterns.yaml
+++ b/schedule/qam/15-SP1/qam-allpatterns.yaml
@@ -29,6 +29,7 @@ schedule:
 - console/zypper_lr
 - console/zypper_ref
 - console/ncurses
+- console/ncurses_extended
 - console/yast2_lan
 - console/curl_https
 - {{salt}}
