sles4sap/hana_cluster: Remove invalid directive in configuration

--- a/data/sles4sap/hana_cluster.conf
+++ b/data/sles4sap/hana_cluster.conf
@@ -30,6 +30,6 @@ ms msl_SAPHana_%SID%_HDB%HDB_INSTANCE% rsc_SAPHana_%SID%_HDB%HDB_INSTANCE% \
 clone base-clone base-group \
         meta target-role=Started
 clone cln_SAPHanaTopology_%SID%_HDB%HDB_INSTANCE% rsc_SAPHanaTopology_%SID%_HDB%HDB_INSTANCE% \
-        meta is-managed=true clone-node-max=1 interleave=true
+        meta clone-node-max=1 interleave=true
 colocation col_saphana_ip_%SID%_HDB%HDB_INSTANCE% 2000: rsc_ip_%SID%_HDB%HDB_INSTANCE%:Started msl_SAPHana_%SID%_HDB%HDB_INSTANCE%:Master
 order ord_SAPHana_%SID%_HDB%HDB_INSTANCE% Optional: cln_SAPHanaTopology_%SID%_HDB%HDB_INSTANCE% msl_SAPHana_%SID%_HDB%HDB_INSTANCE%
