Moved test to extra tests

--- a/schedule/qam/12-SP4/mau-extratests.yaml
+++ b/schedule/qam/12-SP4/mau-extratests.yaml
@@ -60,6 +60,7 @@ schedule:
 - console/osinfo_db
 - console/libgcrypt
 - console/coredump_collect
+- console/ncurses_extended
 conditional_schedule:
   zkvm_boot:
     ARCH:
