--- a/schedule/yast/btrfs/btrfs_sle_libstorage-ng@hmc+ipmi.yaml
+++ b/schedule/yast/btrfs/btrfs_sle_libstorage-ng@hmc+ipmi.yaml
@@ -4,6 +4,7 @@ description:    >
 vars:
   DESKTOP: gnome
   FILESYSTEM: btrfs
+  EXPECTED_INSTALL_HOSTNAME: localhost
 schedule:
   - installation/bootloader_start
   - installation/welcome
