gd test for mau-extratests
Test for the GD Graphics Library in the mau-extratests suite for
SLE 12[SP1-SP5], SLE 15, SLE 15-SP1 and Tumbleweed.
This tests the gd tools by converting a sample picture to various
formats. It checks if the tools are available and if they produce
a valid output.

--- a/schedule/qam/12-SP5/mau-extratests.yaml
+++ b/schedule/qam/12-SP5/mau-extratests.yaml
@@ -59,6 +59,7 @@ schedule:
 - console/aaa_base
 - console/osinfo_db
 - console/libgcrypt
+- console/gd
 - console/coredump_collect
 conditional_schedule:
   zkvm_boot:
