--- a/schedule/qam/15/mau-extratests.yaml
+++ b/schedule/qam/15/mau-extratests.yaml
@@ -63,6 +63,7 @@ schedule:
 - console/osinfo_db
 - console/libgcrypt
 - console/libqca2
+- console/gd
 - console/coredump_collect
 conditional_schedule:
   zkvm_boot:
