Do not schedule tests requiring soundcard on XEN

--- a/schedule/functional/extra_tests_textmode_mod_desktop.yaml
+++ b/schedule/functional/extra_tests_textmode_mod_desktop.yaml
@@ -19,7 +19,8 @@ conditional_schedule:
             aarch64:
                 - console/aplay
                 - console/wavpack
-            x86_64:
+        MACHINE:
+            64bit:
                 - console/aplay
                 - console/wavpack
 schedule:
